--- a/client/templates/client/layout.html
+++ b/client/templates/client/layout.html
@@ -850,41 +850,41 @@
     <section class="content">
 
       <!-- Default box -->
-      <div class="card">
-        <div class="card-header">
-          <h3 class="card-title">Title</h3>
-
-          <div class="card-tools">
-            <button type="button" class="btn btn-tool" data-card-widget="collapse" title="Collapse">
-              <i class="fas fa-minus"></i>
-            </button>
-            <button type="button" class="btn btn-tool" data-card-widget="remove" title="Remove">
-              <i class="fas fa-times"></i>
-            </button>
-          </div>
-        </div>
-        <div class="card-body">
-          Start creating your amazing application!
-        </div>
-        <!-- /.card-body -->
-        <div class="card-footer">
-          Footer
-        </div>
-        <!-- /.card-footer-->
-      </div>
-      <!-- /.card -->
-
-    </section>
-    <!-- /.content -->
-  </div>
+{#      <div class="card">#}
+{#        <div class="card-header">#}
+{#          <h3 class="card-title">Title</h3>#}
+{##}
+{#          <div class="card-tools">#}
+{#            <button type="button" class="btn btn-tool" data-card-widget="collapse" title="Collapse">#}
+{#              <i class="fas fa-minus"></i>#}
+{#            </button>#}
+{#            <button type="button" class="btn btn-tool" data-card-widget="remove" title="Remove">#}
+{#              <i class="fas fa-times"></i>#}
+{#            </button>#}
+{#          </div>#}
+{#        </div>#}
+{#        <div class="card-body">#}
+{#          Start creating your amazing application!#}
+{#        </div>#}
+{#        <!-- /.card-body -->#}
+{#        <div class="card-footer">#}
+{#          Footer#}
+{#        </div>#}
+{#        <!-- /.card-footer-->#}
+{#      </div>#}
+{#      <!-- /.card -->#}
+{##}
+{#    </section>#}
+{#    <!-- /.content -->#}
+{#  </div>#}
   <!-- /.content-wrapper -->
 
-  <footer class="main-footer">
-    <div class="float-right d-none d-sm-block">
-      <b>Version</b> 3.1.0-rc
-    </div>
-    <strong>Copyright &copy; 2014-2020 <a href="https://adminlte.io">AdminLTE.io</a>.</strong> All rights reserved.
-  </footer>
+{#  <footer class="main-footer">#}
+{#    <div class="float-right d-none d-sm-block">#}
+{#      <b>Version</b> 3.1.0-rc#}
+{#    </div>#}
+{#    <strong>Copyright &copy; 2014-2020 <a href="https://adminlte.io">AdminLTE.io</a>.</strong> All rights reserved.#}
+{#  </footer>#}
 
   <!-- Control Sidebar -->
   <aside class="control-sidebar control-sidebar-dark">
