--- a/creditors_master/templates/creditors_master/creditors_confirm_delete.html
+++ b/creditors_master/templates/creditors_master/creditors_confirm_delete.html
@@ -61,7 +61,12 @@
                     </li>
 
      </ul>
-        <input type="submit" value="delete" class="btn btn-danger">
-        <a href="{% url 'rate-view' %}" class="btn btn-info">cancel </a>
+        <div align="center">
+
+            <input type="submit" value="delete" class="btn btn-danger">
+            <a href="{% url 'creditors-view' %}" class="btn btn-info">cancel </a>
+
+        </div>
+
     </form>
 {% endblock %}
