--- a/rates/templates/rates/rate_confirm_delete.html
+++ b/rates/templates/rates/rate_confirm_delete.html
@@ -1,14 +1,27 @@
 {% extends "client/layout.html" %}
 {% block body %}
-    <h1> Are you Sure You Want To Delete ?</h1>
+    <h1 align="center"> Are you Sure You Want To Delete ?</h1>
+    <hr/>
     <form method="post">
     {% csrf_token %}
      <ul>
-        <li> Date : {{ object.date }}</li>
-        <li> petrol :{{ object.petrol_price }}</li>
-        <li> diesel : {{ object.diesel_price }}</li>
+             <li class="list-group-item">
+             <b> Date: </b> <a class="float-right">{{ object.date }}</a>
+             </li>
+
+             <li class="list-group-item">
+             <b> Petrol Price: </b> <a class="float-right">{{ object.petrol_price }}</a>
+             </li>
+
+             <li class="list-group-item">
+             <b> Diesel Price: </b> <a class="float-right">{{ object.diesel_price }}</a>
+             </li>
+
      </ul>
-        <input type="submit" value="delete" class="btn btn-danger">
-        <a href="{% url 'rate-view' %}" class="btn btn-info" >cancel </a>
+        <div align="center">
+            <input type="submit" value="delete" class="btn btn-danger">
+            <a href="{% url 'rate-view' %}" class="btn btn-info" >cancel </a>
+        </div>
+
     </form>
 {% endblock %}
