--- a/tank_master/templates/tank_master/tank_confirm_delete.html
+++ b/tank_master/templates/tank_master/tank_confirm_delete.html
@@ -1,20 +1,43 @@
 {% extends "client/layout.html" %}
 {% block body %}
-    <h1> Are you Sure You Want To Delete ? </h1>
+    <h1 align="center"> Are you Sure You Want To Delete ? </h1>
+    <hr/>
     <form method="post">
     {% csrf_token %}
      <ul>
-        <li> Date : {{ object.date }}</li>
-         <li> Petrol Opening : {{ object.petrol_opening }}</li>
-         <li> Petrol Opening :{{ object.petrol_opening }}</li>
-         <li> Diesel Opening : {{ object.diesel_opening }}</li>
-         <li> Diesel Closing : {{ object.diesel_closing }}</li>
-         <li> Loss Of Petrol in Literes : {{ object.loss_petrol_lit }}</li>
-         <li> Loss Of Diesel in Literes : {{ object.loss_diesel_lit }}</li>
-         <li> Loss Of Petrol in Price : {{ object.loss_petrol_price }}</li>
-         <li> Loss Of Diesel inPrice : {{ object.loss_diesel_price }}</li>
+                        <li class="list-group-item">
+                    <b>Date: </b> <a class="float-right">{{ object.date }}</a>
+                    </li>
+                    <li class="list-group-item">
+                    <b>Opening Of Petrol: </b> <a class="float-right">{{ object.petrol_opening }}</a>
+                    </li>
+                    <li class="list-group-item">
+                    <b>Closing Of Petrol: </b> <a class="float-right">{{ object.petrol_closing }}</a>
+                    </li>
+                    <li class="list-group-item">
+                    <b>Opening Of Diesel: </b> <a class="float-right">{{ object.diesel_opening }}</a>
+                    </li>
+                    <li class="list-group-item">
+                    <b>Closing Of Diesel: </b> <a class="float-right">{{ object.diesel_closing }}</a>
+                    </li>
+                    <li class="list-group-item">
+                    <b>Loss Of Petrol in Literes: </b> <a class="float-right">{{ object.loss_petrol_lit }}</a>
+                    </li>
+                    <li class="list-group-item">
+                    <b>Loss Of Diesel in Literes:</b> <a class="float-right">{{ object.loss_diesel_lit }}</a>
+                    </li>
+                    <li class="list-group-item">
+                    <b>Loss Of Petrol in Price: </b> <a class="float-right">{{ object.loss_petrol_price }}</a>
+                    </li>
+                    <li class="list-group-item">
+                    <b>Loss Of Diesel in Price: </b> <a class="float-right">{{ object.loss_diesel_price }}</a>
+                    </li>
+
     </ul>
-        <input type="submit" value="delete" class="btn btn-danger">
-        <a href="{% url 'rate-view' %}" class="btn btn-info" >cancel </a>
+        <div align="center">
+            <input type="submit" value="delete" class="btn btn-danger">
+            <a href="{% url 'tank-view' %}" class="btn btn-info" >cancel </a>
+        </div>
+
     </form>
 {% endblock %}
