nozzlle_transaction & calculation_master is created!!!

--- a/client/templates/client/layout.html
+++ b/client/templates/client/layout.html
@@ -292,6 +292,58 @@
             <a href="#" class="nav-link">
               <i class="nav-icon fas fa-th"></i>
               <p>
+                Nozzlle Transaction
+                <i class="right fas fa-angle-left"></i>
+              </p>
+            </a>
+
+              <ul class="nav nav-treeview">
+                  <li class="nav-item">
+                    <a href="{% url 'nozzlle_transaction-new' %}" class="nav-link">
+                      <i class="far fa-circle nav-icon"></i>
+                      <p>New</p>
+                    </a>
+                  </li>
+                  <li class="nav-item">
+                    <a href="{% url 'nozzlle_transaction-view' %}" class="nav-link">
+                      <i class="far fa-circle nav-icon"></i>
+                      <p>View</p>
+                    </a>
+                  </li>
+              </ul>
+
+            </li>
+
+            <li class="nav-item">
+            <a href="#" class="nav-link">
+              <i class="nav-icon fas fa-th"></i>
+              <p>
+                Calculation
+                <i class="right fas fa-angle-left"></i>
+              </p>
+            </a>
+
+              <ul class="nav nav-treeview">
+                  <li class="nav-item">
+                    <a href="{% url 'calculation-new' %}" class="nav-link">
+                      <i class="far fa-circle nav-icon"></i>
+                      <p>New</p>
+                    </a>
+                  </li>
+                  <li class="nav-item">
+                    <a href="{% url 'calculation-view' %}" class="nav-link">
+                      <i class="far fa-circle nav-icon"></i>
+                      <p>View</p>
+                    </a>
+                  </li>
+              </ul>
+
+            </li>
+
+            <li class="nav-item">
+            <a href="#" class="nav-link">
+              <i class="nav-icon fas fa-th"></i>
+              <p>
                 Employee Master
                 <i class="right fas fa-angle-left"></i>
               </p>
